# Path-Planning-for-UAV-Avalanche-Rescue

./: Project Description.txt  README.md  random_victims.py
Lab_1/code/: CMakeLists.txt
Lab_1/code/src/: random_vector.cpp
Lab_2/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
Lab_2/catkin_ws/src/two_drones_pkg/: README.md  package.xml
Lab_2/catkin_ws/src/two_drones_pkg/config/: default.rviz
Lab_2/catkin_ws/src/two_drones_pkg/src/: frames_publisher_node.cpp  plots_publisher_node.cpp
Lab_3/: Dockerfile  README.md
Lab_4/: .gitmodules
Lab_4/aas_ws/.catkin_tools/profiles/default/: devel_collisions.txt
Lab_4/aas_ws/src/controller_pkg/: CMakeLists.txt
Lab_4/aas_ws/src/controller_pkg/config/: controller_params.yaml
Lab_4/aas_ws/src/controller_pkg/launch/: controller.launch
Lab_4/aas_ws/src/controller_pkg/src/: controller_node.cpp
Lab_4/aas_ws/src/unity_bridge/: CMakeLists.txt
Lab_4/aas_ws/src/unity_bridge/launch/: unity_sim.launch
Lab_4/aas_ws/src/unity_bridge/src/: traj_publisher.cpp  unity_state.cpp
Lab_4/docker/: Dockerfile  README.md
Lab_6/: README.md
Lab_6/as_ws/.catkin_tools/profiles/default/: devel_collisions.txt
Lab_6/as_ws/src/basic_waypoint_pkg/config/: trajectory_config.yaml
Lab_6/as_ws/src/basic_waypoint_pkg/include/: planner.h
Lab_6/as_ws/src/unity_bridge/: CMakeLists.txt
Lab_6/docker/: Dockerfile
Project/: README.md  random_victims.py
Project/catkin_ws/src/sensor_model/: CMakeLists.txt
Project/catkin_ws/src/unity_bridge/: CMakeLists.txt
Project/catkin_ws/src/unity_bridge/launch/: unity_sim.launch
Project/catkin_ws/src/unity_bridge/src/: traj_publisher.cpp
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/basic_waypoint_pkg/: CMakeLists.txt
catkin_ws/src/basic_waypoint_pkg/include/: planner.h
catkin_ws/src/basic_waypoint_pkg/launch/: waypoint_mission.launch
catkin_ws/src/basic_waypoint_pkg/src/: planner.cc
catkin_ws/src/controller_pkg/launch/: controller.launch
catkin_ws/src/sensor_model/src/: sensor_node.cpp
catkin_ws/src/unity_bridge/: package.xml
catkin_ws/src/unity_bridge/src/: traj_publisher.cpp  unity_state.cpp  w_to_unity.cpp
catkin_ws/src/unity_bridge/tcpimage/: TCPImageServer.cpp  TCPStreamReader.cpp  TCPStreamReader.h
docker/: dockerfile
docus/: report.tex
(+16 files in other folders)
